--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3.8'
 
 services:
+
+ redis:
+    image: redis:7.0.11-alpine
+
  django:
     container_name: django
     build:
@@ -14,3 +18,5 @@ services:
       - DEBUG=1
       - SECRET_KEY=0930jd30j9jd09j09j109fj01j9f
       - ALLOWED_HOSTS=localhost,127.0.0.1
+    depends_on:
+      - redis
