--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,18 @@ services:
       - ALLOWED_HOSTS=localhost,127.0.0.1
     depends_on:
       - redis
+
+ celery:
+    container_name: celery
+    build:
+      context: ./_celery
+    volumes:
+      - ./_celery:/Users/Mahammad/app
+  
+    environment:
+      - DEBUG=1
+      - SECRET_KEY=0930jd30j9jd09j09j109fj01j9f
+      - ALLOWED_HOSTS=localhost,127.0.0.1
+    depends_on:
+      - redis
+
