--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,13 @@ version: '3.8'
 
 services:
 
+ rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    ports:
+     - 5672:5672
+     - 15672:15672
+
  redis:
     image: redis:7.0.11-alpine
 
@@ -25,7 +32,7 @@ services:
     container_name: celery
     build:
       context: ./_celery
-    command: celery --app=_celery worker -l INFO -Q celery,celery:1,celery:2,celery:3
+    command: celery --app=_celery worker -l INFO -Q tasks
     volumes:
       - ./_celery:/Users/Mahammad/app
   
@@ -36,6 +43,7 @@ services:
     depends_on:
       - redis
       - django
+      - rabbitmq
   
 #  celerynew:
 #     container_name: celerynew
